<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GPSActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TV_gps_consigne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_gps_consigne"/>

        <TextView
            android:id="@+id/TV_gps_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_latitude"/>

        <TextView
            android:id="@+id/TV_gps_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_longitude"/>

        <Button
            android:id="@+id/BT_gps_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/bt_map_marker_continue"
            android:onClick="gpsContinue"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>