<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackingMethodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TV_tracking_method_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_tracking_method_question"/>

        <TextView
            android:id="@+id/TV_tracking_method_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_tracking_method_gps"/>

        <Button
            android:id="@+id/BT_tracking_method_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_tracking_method"
            android:onClick="choseGPS"/>

        <TextView
            android:id="@+id/TV_tracking_method_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_tracking_method_map"/>

        <Button
            android:id="@+id/BT_tracking_method_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_tracking_method"
            android:onClick="choseMap"/>

        <TextView
            android:id="@+id/TV_tracking_method_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_tracking_method_manual"/>

        <Button
            android:id="@+id/BT_tracking_method_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_tracking_method"
            android:onClick="choseManual"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>