<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/images"
    tools:context=".AccueilActivity"
    app:layout_behavior="@string/app_name"
    tools:showIn="@layout/activity_accueil">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_marginTop="100sp"
        android:paddingLeft="40dp"
        tools:ignore="MissingConstraints">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="60dp">

        <ImageButton
            android:id="@+id/img"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:background="@drawable/circlebackground2"
            android:padding="10dp"
            android:src="@drawable/ic_photo_camera_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buton"
            android:textSize="26sp"
            android:textColor="#fff"
            android:paddingLeft="10dp"
            android:textStyle="bold" />

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imap"
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:background="@drawable/circlebackground2"
                    android:padding="10dp"
                    android:src="@drawable/ic_place_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:textSize="26sp"
                    android:textColor="#fff"
                    android:textStyle="bold" />

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingRight="60sp">

                <ImageButton
                    android:id="@+id/mQuiz"
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:padding="10dp"
                    android:background="@drawable/circlebackground2"
                    android:src="@drawable/ic_create_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt"
                    android:textSize="26sp"
                    android:paddingLeft="18sp"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mCopy"
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:background="@drawable/circlebackground2"
                    android:src="@drawable/ic_local_florist_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt1"
                    android:textSize="25sp"
                   android:paddingLeft="0dp"
                    android:textColor="#fff"
                    android:textStyle="bold" />

            </LinearLayout>

    </LinearLayout>

</LinearLayout>